@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/OptionLists.txt,v 1.26 2006/10/24 12:56:06 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/OptionLists.txt,v 1.27 2006/11/06 15:50:12 ph10 Exp $
 
 LISTS OF EXIM OPTIONS
 ---------------------
@@ -68,6 +68,7 @@ acl_smtp_rcpt                        string*         unset         main         
 acl_smtp_starttls                    string*         unset         main              4.11
 acl_smtp_vrfy                        string*         unset         main              4.00
 address_data                         string*         unset         routers           4.00
+address_retry_include_sender         boolean         true          smtp              4.64
 address_test                         boolean         true          routers           4.14
 admin_groups                         string list     unset         main              3.02
 allow_domain_literals                boolean         false         main              4.00 replacing forbid_domain_literals
